# Neuroslave

./: .gitignore  README.md  TODO.md
Apps/: neurorec.py  neurosound.py  signal_viewer.py  signal_viewer_2.py  wavplayer.py
NN/: datagen.py  train.py  utils.py
NN/models/: resnet.py
NN/models/unet/: unet_model.py
SignalDisplay/: .gitignore  COMMUNICATION.md  struct_tools.h
SignalDisplay/SignalDisplay/: SignalDisplay.pro  dialogconnectionsettings.cpp  dialogconnectionsettings.h  dialogconnectionsettings.ui  img.qrc  mainwindow.cpp  mainwindow.h  stringlist_dialog.cpp  stringlist_dialog.h
SignalDisplay/SignalDisplay/sarstructsettings/: sarsessionitem.cpp  sarsessionitem.h  sarstructsettingsModel.cpp  sarstructsettingsModel.h  sarstructsettingsdialog.cpp  sarstructsettingsdialog.h
firmwares/DummyGanglion/: DummyGanglion.ino
firmwares/SlaveGanglion/: Ganglion_Slave.cpp  Ganglion_Slave.h  SlaveGanglion.ino  queue_mcu_rnr.h
firmwares/StmWay/: CMakeLists.txt
firmwares/StmWay/eth/: server_w5500.c  server_w5500.h
firmwares/StmWay/proto/: nsv_tcp_proto.h
firmwares/StmWay/spi/: spi_hal_tools.h  spi_ll_easy_api.c  spi_ll_easy_api.h
firmwares/StmWay/spi_eth_ads_f4/: .gitignore  CMakeLists.txt  build.sh  neuromain.c  stm32f4xx_hal_conf.h  upload.sh
libc/audio_tools/: run.sh  wave_music.c  wave_music.h  wmain.c
libc/common_tools/: README.MD  common_tools.h  physic_types.h  scoped_thread.h  struct_tools.h  threadsafe_queue.h  time_types.h
libc/communication/: .gitignore  README.MD
libc/communication/clientTCP/: tcpclient.cpp  tcpclient.h
libc/communication/communicator/: .gitignore  communication.h  communicator.h  consolestream.cpp  consolestream.h  tcpserverstream.cpp  tcpserverstream.h
libc/communication/serverTCP/: tcpserver.cpp  tcpserver.h
libc/eeg_tools/ads1299/: ads1299_ctl.c  ads1299_ctl.h  ads1299_defs.h  ads1299_master.c  ads1299_master.h
libc/file_tools/: streamlogger.h
libc/ganglion_comm/: ganglion_comm.cpp  ganglion_comm.h  ganglion_spi_comm.c  ganglion_spi_comm.h
libc/ganglion_comm/definitions/: ganglion_comm_defines.h
libc/neuroslave/: build.sh  neuroslave_ctl.cpp  neuroslave_ctl.h  nsvtest.cpp
libc/neuroslave/definitions/: neuroslave_data.h  neuroslave_fs.cpp  neuroslave_fs.h  neuroslave_msg.cpp  neuroslave_msg.h  neuroslave_state.c  neuroslave_state.h  neuroslave_struct.cpp  neuroslave_struct.h
libc/neuroslave/handler/: eeg_distributor.cpp  eeg_distributor.h
libc/neuroslave/music/: wave_player.cpp  wave_player.h
libc/neuroslave/source/: ganglion_comm.cpp  ganglion_comm.h
libc/system_tools/: signal_tools.h
nsfw_0/main/: main.cpp  proto.cpp  proto.hpp  tgam.cpp  tgam.hpp  wifiobj.cpp  wifiobj.hpp
rpi_eeg/: .gitignore  DummyGanglion.ino  ganglion_spi.py  mcp3912.py  nsv_client.py  nsv_data_handler.py  nsv_def.py  nsv_imitator.py  nsv_tcp_srv.py  requirements.sh
rpi_eeg/SlaveGanglion/: Ganglion_Slave.cpp  Ganglion_Slave.h  Ganglion_Slave_Proto.h  SlaveGanglion.ino  queue_mcu_rnr.h
rpicpp/version_rpi_ganglion/: CMakeLists.txt  build.sh  gangmain.cpp  nsvtest.cpp  requirements.sh
rpicpp/version_rpi_ganglion/CrossBuild/: .gitignore  all_build_upload.sh  build.sh  settings.cmake
rpicpp/version_rpi_ganglion/TargetBuild/: .gitignore  build.sh  launch.sh  settings.cmake  upload.sh
rpicpp/version_rpi_ganglion/UbuntuBuild/: settings.cmake
